2006-03-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/gtk/client.py:
	  Admin not redrawing properly when displaying warnings fixes #333

2006-03-08  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/text/view.py:
	  make components view a scrollable list in text admin
	  fixes #329

2006-03-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/config.py:
	  report filename where config has error being parsed fixes #309

2006-03-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/disker/disker.py:
	  make disker go sad, when error writing fixes  #331
 
2006-03-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/worker/checks/video010.py:
	* flumotion/worker/checks/video08.py:
	  set pipeline to NULL after running necessary worker check even
	  errors freeing necessary resources...fixes #191 - original patch
	  from Gergely Nagy

2006-03-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to TRUNK

=== release 0.2.0 ===

2006-03-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.2.0, "San Telmo"

2006-03-03  Edward Hervey  <edward@fluendo.com>

	* po/fr.po:
	Update pour le french translation.

2006-03-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/test_worker_worker.py:
	* flumotion/worker/worker.py:
	  make sure that jobs that crash or dont start properly get reported
	  as ComponentCreateErrors so components go sad rather than the
	  manager continually thinking component is starting

2006-03-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/worker/checks/encoder.py:
	  make sure vorbis translatable message actually gets added

2006-03-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	  updates
	* flumotion/component/muxers/Makefile.am:
	* flumotion/component/muxers/muxers.xml: